fix: correct gaps

--- a/src/pages/seller-pages/SellerProfilePage/SellerProfilePage.module.scss
+++ b/src/pages/seller-pages/SellerProfilePage/SellerProfilePage.module.scss
@@ -43,13 +43,22 @@
       'personal_info business_info'
       'notifications account_managment';
     grid-template-columns: minmax(auto, 500px) minmax(auto, 700px);
+    gap: 24px;
     padding: 12px 16px;
   }
+
+  .account_management {
+    gap: 30px;
+  }
+
+  .business_info > div {
+    margin-bottom: 30px;
+  }
+
 }
 
 @media only screen and (max-width: 1000px) {
   .content_container {
-    grid-gap: 12px;
     grid-template-columns: minmax(auto, 450px) minmax(auto, 550px);
   }
 
@@ -57,14 +66,14 @@
     padding: 32px;
   }
 
+
   .account_management {
-    gap: 28px;
+    gap: 30px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .content_container {
-    grid-gap: 0;
     grid-template-areas:
       'personal_info'
       'business_info'
@@ -76,11 +85,21 @@
   .notifications {
     padding: 16px 32px;
   }
+
 }
 
 @media only screen and (max-width: 485px) {
   .content_container {
-    padding: 12px 0 16px;
+    gap: 20px;
+    padding: 12px 0 32px;
+  }
+
+  .business_info > div {
+    margin-bottom: 32px;
+  }
+
+  .business_info > div:nth-child(2) {
+    margin-bottom: 18px;
   }
 
   .notifications, .business_profile, .personal_info, .account_management > div, .section {
